frontends/web/src/components/forms/input.css
.input {
    width: 100%;
    margin-bottom: var(--space-half);
    position: relative;
}

.input label {
    display: block !important;
    margin: 0 0 var(--space-quarter) 0;
}

.input input {
    background-color: var(--color-white);
    border-color: var(--color-mediumgray);
    border-radius: 2px;
    border-style: solid;
    border-width: 1px;
    font-family: var(--font-family);
    font-size: var(--size-default);
    font-weight: 400;
    height: 52px;
    padding: 0 var(--space-half);
    width: 100%;
    transition: border-color .2s ease-out;
    will-change: border-color;
}

.input input:focus {
    border-color: var(--color-blue);
    outline: none;
}

.input input::placeholder {
    color: var(--color-secondary);
}

.input input[disabled] {
    background-color: var(--color-white) !important;
    border-color: var(--color-lightgray) !important;
    color: var(--color-secondary) !important;
    cursor: not-allowed;
}

.isTransparent input[disabled] {
    border-color: var(--color-lightgray);
    color: var(--color-default) !important;
    cursor: default;
}

.errorText {
    color: var(--color-softred);
}

.errorText > span > span {
    margin-left: 5px;
}

